Fix slideshow scroll position on mobile

--- a/app/css/main.sass
+++ b/app/css/main.sass
@@ -736,7 +736,7 @@ $team-slide-easing: $ease-in-out-quad
 
 @media #{$media-small}
   #slideshow
-    margin-top: 40px
+    padding-top: 40px
   .slideshow__slide
     margin-bottom: 40px
     &:last-child
